--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2 id="clock">00:00</h2>
         <h1 id="greeting" class="hidden"></h1>
         <form id="todo-form">
-            <h2 id="todo-text">Write today's To Do</h2>
+            <h2 id="todo-text">Write today's To Do :</h2>
             <input required id="todo-input" type="text" autocomplete="off">
         </form>
         <ul id="todo-list"></ul>
