--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <input required maxlength="15" id="login-input" type="text" placeholder="What is your name?">
         </form>
         <h2 id="clock">00:00</h2>
-        <h1 id="greeting" class="hidden"></h1>
+
+        <div id="greeting" class="hidden"></div>
         <form id="todo-form">
             <h2 id="todo-text">Write today's To Do :</h2>
             <input required id="todo-input" type="text" autocomplete="off">
