--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="main">
         <form id="login-form" class="hidden">
-            <input required maxlength="15" id="login-input" type="text" placeholder="What is your name?">
+            <input required maxlength="15" autocomplete="off" id="login-input" type="text" placeholder="What is your name?">
         </form>
         <h2 id="clock">00:00</h2>
 
